tanka/manifests/infrastructure/configs/vault/traefik.containo.us-v1alpha1.IngressRouteTCP-vault.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`vault.test.wirywolf.com`)
    services:
    - name: vault-ui
      port: 8300
      weight: 1
  tls:
    passthrough: true
